[package]
edition = "2021"
name = "wiimote-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
bitflags = "1.3.2"
crossbeam-channel = "0.5.6"
thiserror = "1.0.37"
widestring = "1.0.2"

[dependencies.windows]
features = [
  "alloc",
  "Win32_Foundation",
  "Win32_Devices_Bluetooth",
  "Win32_Devices_DeviceAndDriverInstallation",
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
]
version = "0.38.0"
